{
    "name": "ControlSet",
    "maps": [
        {
            "name": "Movement",
            "id": "8643e742-fc8a-4423-a099-98aab7ccadd2",
            "actions": [
                {
                    "name": "CameraLook",
                    "type": "Value",
                    "id": "8f65d4a4-a059-4c89-acd2-3b74e35865d6",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2(invertX=false)",
                    "interactions": ""
                },
                {
                    "name": "MovementInput",
                    "type": "Value",
                    "id": "522cea0b-888f-47c3-a9fe-dc68ee60afb0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraLookJoystick",
                    "type": "Value",
                    "id": "5f101402-004f-42b0-9982-2cbac627356d",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2(invertX=false)",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "503fc756-43d5-4e75-a8a4-0adc40b547cc",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "8fd87e56-38f7-470b-bd1e-1a28328d9905",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f644f926-373a-45a7-9c0a-b14fb5bcfc0e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a919a991-6312-4e94-988e-3922abea8d5f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b1157862-eec8-4823-9018-13f1f6e6a596",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "74d86aa8-1c32-427b-b4a3-b8b1787aab8f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e48e989b-dec3-4e6f-90cc-f453307bf10f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9de53c0-c73c-4bfe-9909-c89afbf6767e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CameraLookJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat",
            "id": "dc53a3c9-1451-4c58-9a5e-c85bcd117414",
            "actions": [
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "073ce498-44df-4ed9-b911-aa04092c58eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "079545ce-a894-4463-aa1e-396ecf9b7b21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DodgeRoll",
                    "type": "Button",
                    "id": "1463e9f3-411a-49f2-8bc1-7216ba7d02a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6fcdfbdf-b30d-45a3-9b5f-de1b5eec6d41",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db6d5275-ff27-4ff1-aaa4-70fd9ab6f6be",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "846de470-753c-4d40-b23a-1863d5f2d14b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9f58ab8-a735-4c1f-9734-b0533f7bfa56",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38b2c17b-1080-4cd1-9bf4-94b0cdf1ae53",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4568f6c8-5616-4fb6-a178-3c0259a60b16",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "DodgeRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd817ce3-eda7-481f-8f90-8b49ddcc2166",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "DodgeRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Testing",
            "id": "9f995db1-6a46-49cc-a29b-6ed40a12d15f",
            "actions": [
                {
                    "name": "FlinchingAttack",
                    "type": "Button",
                    "id": "862814ad-fb07-4681-90ea-53af8134a05e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8b43f174-8d73-458e-a910-b7dcd3e0954d",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "FlinchingAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "2519b63a-7628-46cf-bfa0-3088b6593534",
            "actions": [
                {
                    "name": "KeyboardToggleMenu",
                    "type": "Button",
                    "id": "877a949f-a3d6-44df-a0d9-677a7c21a4b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ControllerBack",
                    "type": "Button",
                    "id": "3680e480-eaad-4f5f-9e2a-79f9388bedfd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ControllerToggleMenu",
                    "type": "Button",
                    "id": "4cb20e1f-22f7-4f76-98ac-edb5aad4e4fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "49eddd57-efab-4f12-83fe-011f2e42dc6b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "KeyboardToggleMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af1426ab-f374-4be5-8546-2d36349afcc2",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ControllerBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6645342b-7e12-4167-a073-ccf714634a44",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ControllerToggleMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Miscellaneous",
            "id": "7c8c3ed1-1f7f-4fe3-9a45-59545c64f37b",
            "actions": [
                {
                    "name": "ToggleLockOnTarget",
                    "type": "Button",
                    "id": "ba4e9f33-085a-49c9-bd43-ab43d96e1c15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "96bc0d5f-5692-4d6c-a01b-37dc3b254bcc",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ToggleLockOnTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mouse&Keyboard",
            "bindingGroup": "Mouse&Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}